--- a/galleryview/src/main/res/values/strings.xml
+++ b/galleryview/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="root_dir">Ana Dizin</string>
     <string name="image_selected">Media dosyası seçildi.</string>
     <string name="remove">Kaldır</string>
+    <string name="file">Dosya</string>
 </resources>
